Avoid page breaks in sections in print mode

--- a/_sass/print.scss
+++ b/_sass/print.scss
@@ -62,6 +62,9 @@ h3 {
 }
 
 .resume {
+  .section {
+    page-break-inside: avoid;
+  }
   .section:after {
     background: none;
   }
